src/objects/Distribution__c.object
<CustomObject>
    <fields>
        <fullName>AmountOrdered__c</fullName>
        <formula>POLineItem__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistributionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Distribution Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureDate__c</fullName>
        <label>Expenditure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <picklist>
            <picklistValues>
                <fullName>SUBC- IT Outside Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Architechtural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Audit Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Director Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Electrical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-IT Prof. Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Inter Project Manual Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Interco Receiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Interco Service Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Interproject Service Prov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Land Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Legal Fees - Allowable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Legal Fees - E&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Legal Fees - Unallw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Major Trades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Mechanical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Outside Services - Allow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Outside Services - Unallw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Structural Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Subconsultant Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Subconsultant Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OracleProjectNumber__c</fullName>
        <formula>POLineItem__r.POHeader__r.Project__r.OracleProjectnumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POHeader__c</fullName>
        <formula>POLineItem__r.POHeader__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POHeader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLineItem__c</fullName>
        <label>PO Line Item</label>
        <referenceTo>POLineItem__c</referenceTo>
        <relationshipLabel>Distributions</relationshipLabel>
        <relationshipName>DistributionsPOLineItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>POLineNumber__c</fullName>
        <formula>POLineItem__r.LineNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POLinteItemExpenditureType__c</fullName>
        <formula>TEXT(POLineItem__r.ExpenditureType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenditure Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTaskNumber__c</fullName>
        <formula>POLineItem__r.ProjectTask__r.ProjectTaskNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Task Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityOrdered__c</fullName>
        <formula>POLineItem__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Distribution</label>
    <nameField>
        <displayFormat>DN-{0}</displayFormat>
        <label>Distribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>